# Telecom_encoding

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: main.c.D84807FD6DC394B4.idx  reed_solomon.h.A80E8CB9BEA8BDB3.idx
include/: convolution_encoding.h  reed_solomon.h  scramble.h
src/: main.c  reed_solomon.c
